# work-monitor

./: pyproject.toml
.github/workflows/: action.yml
monitor/: app.py  capture.py  command.py  config.py  log.py  policy.py  server.py  video.py
